update cocos studio version

--- a/Zoo.cfg
+++ b/Zoo.cfg
@@ -1,1 +1,20 @@
-﻿<Properties publishHasCocos2dxCode="True" PublishDirectory="Resources/res" SolutionSize="1136 * 640" DefaultSerializer="Serializer_FlatBuffers" CustomSerializer="Serializer_FlatBuffers" IsCompleteSolution="True" publishCocos2dxCodeLanguage="cpp" publishCocos2dxMainVersion="3" publishCocos2dxVersionText="cocos2d-x-3.6" CurrentFrameworkVersion="cocos2d-x-3.6" SolutionCodeType="Complete" IsNameStandardized="False" ResolutationName="iPhone 5/5S" PackageDirectory="package/" />
+<SolutionConfig Version="2.3.1.1">
+  <PublishDirectory Value="Resources/res" />
+  <PackageDirectory Value="package/" />
+  <PublishType Value="Reference" />
+  <SolutionSize Value="1136 * 640" />
+  <ResolutionName Value="iPhone 5/5S" />
+  <DefaultSerializer Value="Serializer_FlatBuffers" />
+  <CustomSerializer Value="Serializer_FlatBuffers" />
+  <IsNameStandardized Value="False" />
+  <CustomProperties>
+    <Item Key="CCS_CocosPropertis">
+      <Value ctype="CocosProperties">
+        <SolutionCodeType Value="Complete" />
+        <ProgramLanguage Value="cpp" />
+        <CreateFrameworkVersion Value="cocos2d-x-3.6" />
+        <CurrentFrameworkVersion Value="cocos2d-x-3.6" />
+      </Value>
+    </Item>
+  </CustomProperties>
+</SolutionConfig>
